basic-tor-node/rootoverlay/etc/iptables/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
# INPUT: Allow loopback, pings, and ssh by default,  block everything else
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j ACCEPT
#-A INPUT -p tcp -m multiport --dports 9050,9051 -j ACCEPT

# OUTPUT: ALlow loopback, DNS requests and TOR
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
#-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 53,853 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 9001,9010,9030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT

#Digital Ocean API host
-A OUTPUT -d 169.254.169.254 -p tcp -m multiport --dports 80,443 -j ACCEPT

COMMIT
